<resources>
    <string name="app_name">Motion Bed</string>
    <string name="open_bluetooth">Please enable Bluetooth</string>
    <string name="open_permission">The application needs to obtain device location information and Bluetooth scanning permission, which is used to connect the device through Bluetooth for operation. Is it allowed to obtain the above permissions?
</string>
    <string name="exit">Press the back key again to exit the app</string>
    <string name="tongbukz_on">SYNCHR ON</string>
    <string name="tongbukz_off">SYNCHR OFF</string>
    <string name="disagree">disagree</string>
    <string name="agree">Agree</string>
    <string name="text_enter">Enter</string>
    <string name="blue_equipment">Bluetooth device</string>
    <string name="search_blue_equipment">Scan Nearby Bluetooth devices</string>
    <string name="searching">searching...</string>
    <string name="sending">sending...</string>
    <string name="connecting">connecting...</string>
    <string name="please_wait">Please later...</string>
    <string name="please_input">Please enter a number</string>
    <string name="connected_failed">The connection failed. Please try to reconnect</string>
    <string name="dialog_title_disconnect">Disconnected or not</string>
    <string name="dialog_negetive">Cancel</string>
    <string name="dialog_positive">sure</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="connecting_device">Connect Device</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="click_to_connect">Click to connect</string>
    <string name="lighting_time">Lighting time</string>
    <string name="switch_language">Switch Language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="chinese">traditional Chinese</string>
    <string name="chinese_cn">Simplified Chinese</string>
    <string name="japan">Japanese</string>
    <string name="version">Version</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="setting">Setting</string>
    <string name="fault_debugging">Troubleshooting</string>
    <string name="fault_part">Faulty component</string>
    <string name="fault_type">Fault type</string>
    <string name="alarm">Alarm setting</string>
    <string name="sync">Sync control</string>
    <string name="kuaijie">SHORTCUT</string>
    <string name="weitiao">MICRO ADJ</string>
    <string name="anmo">MASSAGE</string>
    <string name="dengguang">LIGHT</string>
    <string name="sleep">SMART SLEEP</string>
    <string name="jiyi">Memory</string>
    <string name="jiyi1">Memory 1</string>
    <string name="jiyi2">Memory 2</string>
    <string name="kandianshi">Watch TV</string>
    <string name="lingyali">Zero Gravity</string>
    <string name="zhihan">Anti Snore</string>
    <string name="fangsong">Relax</string>
    <string name="yinyue">Sleep And Music</string>
    <string name="fuyuan">Flat Bed</string>
    <string name="tingyinyue">Music</string>
    <string name="tuibufangsong">Leg Relax</string>
    <string name="dingyao">Lumbar</string>
    <string name="fenti">Split</string>
    <string name="tongbu">Sync</string>
    <string name="yujia">YOGA</string>
    <string name="yijianshengqi">Rise</string>
    <string name="yijianjiangxia">Decline</string>
    <string name="houqing">Tilt Backward</string>
    <string name="qianqing">Tilt forward</string>
    <string name="zhengtishangsheng">Rise</string>
    <string name="zhengtixiajiang">Decline</string>
    <string name="zhengtifuyuan">All Flat</string>
    <string name="beibutiaozheng">BACK</string>
    <string name="tunbutiaozheng">HIP</string>
    <string name="toubutiaozheng">HEAD</string>
    <string name="tuibutiaozheng">LEG</string>
    <string name="yaobutiaozheng">LUMBAR</string>
    <string name="beituitiaozheng">BACK LEG</string>
    <string name="zhengtishengjiang">LIFT</string>
    <string name="zhengtiqingxie">TILT</string>
    <string name="quanshenxunhuan">FULL CYCLE</string>
    <string name="tunbuxunhuan">HIP CYCLE</string>
    <string name="toubuxunhuan">HEAD CYCLE</string>
    <string name="tuibuxunhuan">LEG CYCLE</string>
    <string name="yaobuxunhuan">LUMBAR CYCLE</string>
    <string name="beibuxunhuan">BACK CYCLE</string>
    <string name="beituixunhuan">BACK/LEG CYCLE</string>
    <string name="dengguangshijian">Lighting time</string>
    <string name="tenfenzhong">10Mins</string>
    <string name="eightxiaoshi">8Hours</string>
    <string name="tentxiaoshi">10Hours</string>
    <string name="dengguangliangdu">Brightness</string>
    <string name="dengguangliangdu_min_tips">The current brightness has been set to the lowest</string>
    <string name="dengguangliangdu_max_tips">The current brightness has been adjusted to the maximum</string>
    <string name="anmopingdonghuaqu">MASSAGE</string>
    <string name="anmopinglv">Mass Wave</string>
    <string name="toubuanmo">Back Mass</string>
    <string name="zubuanmo">Leg Mass</string>
    <string name="tenmin">10min</string>
    <string name="twentymin">20min</string>
    <string name="thirtymin">30min</string>
    <string name="device_no_connected">Device Not Connected</string>
    <string name="device_disconnect">Device disConnected please reconnected</string>
    <string name="debug_switch">debug switch</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="alarm_switch">Alarm switch</string>
    <string name="alarm_open">On</string>
    <string name="alarm_close">Off</string>
    <string name="alarm_time">Time</string>
    <string name="alarm_week">Week</string>
    <string name="alarm_week_no_repeat">No repetition</string>
    <string name="alarm_mode">Position</string>
    <string name="alarm_mode_lingyali">Zero Gravity</string>
    <string name="alarm_mode_jiyi1">Memory 1</string>
    <string name="alarm_mode_budongzuo">No action</string>
    <string name="alarm_anmo">MASSAGE</string>
    <string name="alarm_xiangling">Alarm</string>
    <string name="alarm_save">Save settings</string>
    <string name="alarm_mode_lingyali_left">Zero Gravity Left</string>
    <string name="alarm_mode_lingyali_right">Zero Gravity Right</string>
    <string name="alarm_save_suc">Save SUCCESS</string>
    <string name="alarm_save_failed">Alarm clock setting failed, please click Save settings again</string>
    <string name="week">week</string>
    <string name="week_monday">Monday</string>
    <string name="week_tuesday">Tuesday</string>
    <string name="week_wednesday">Wednesday</string>
    <string name="week_thursday">Thursday</string>
    <string name="week_friday">Friday</string>
    <string name="week_saturday">Saturday</string>
    <string name="week_sunday">Sunday</string>
    <string name="music_1">Track 1</string>
    <string name="music_2">Track 2</string>
    <string name="music_3">Track 3</string>
    <string name="music_4">Track 4</string>
    <string name="music_5">Track 5</string>
    <string name="music_2_0">No music</string>
    <string name="music_2_1">Alarm clock 1</string>
    <string name="music_2_2">Alarm clock 2</string>
    <string name="music_2_3">Alarm clock 3</string>
    <string name="music_2_4">Alarm clock 4</string>
    <string name="music_2_5">Alarm clock 5</string>
    <string name="guzhangtiaoshi">Troubleshooting</string>
    <string name="guzhangbujian">Faulty component</string>
    <string name="guzhangleixing">Fault type</string>
    <string name="guanbi">Close</string>
    <string name="toubu">Head</string>
    <string name="beibu">Back</string>
    <string name="zuobiantunbu">Left hip</string>
    <string name="youbiantunbu">Right hip</string>
    <string name="zuobiantuibu">Left leg</string>
    <string name="youbiantuibu">Right leg</string>
    <string name="tunbu">Hip</string>
    <string name="tuibu">Leg</string>
    <string name="dianjisuohuai">Motor broken</string>
    <string name="dianjiguozai">Motor overload</string>
    <string name="dianjiduanlu">Motor short circuit</string>
    <string name="cejusuohuai">Sensor broken</string>
    <string name="tongzucejusuohuai">Same group sensor broken</string>
    <string name="julichazhiguoda">Large distance difference</string>
    <string name="dianjifanxiangdongzuo">Motor reverse action</string>
    <string name="julibuzaifangwei">Distance out of range</string>
    <string name="julituobian">Distance mutation</string>
    <string name="mubiaoweizhipianli">Target position deviation</string>
    <string name="shebeiyiqiezhengchang">The equipment is all right</string>
    <string name="ss_title">Smart sleep</string>
    <string name="ss_item_shujuluru">Input posture data</string>
    <string name="ss_item_shuizitiaozheng">Set position angle</string>
    <string name="ss_item_shuimiandingshi">Smart sleep timing</string>
    <string name="ss_item_shuimianbaogao">Sleep report</string>
    <string name="ss_item_zhinengshuimian_open">Smart sleep / on</string>
    <string name="ss_item_zhinengshuimian_close">Smart sleep / off</string>
    <string name="ss_item_zhinengyedeng_open">Smart light / on</string>
    <string name="ss_item_zhinengyedeng_close">Smart light  / off</string>
    <string name="ss_item_no_time">No timed</string>
    <string name="sde_top_title">Input posture data</string>
    <string name="sde_top_tips_title">Instruction:</string>
    <string name="sde_top_tips_1">1. Please make the bed flat first, and then perform data entry operation.</string>
    <string name="sde_top_tips_2">2. Please lie flat, after completely relaxing your body, press the lie flat button.</string>
    <string name="sde_top_tips_3">3. Please lie on your side, after completely relaxing your body, press Lie side button.</string>
    <string name="sde_top_tips_4">4. After completing the above operations, please press the save button</string>
    <string name="sde_ptcs">Flat：</string>
    <string name="sde_pt">Lie flat</string>
    <string name="sde_ctcs">Side：</string>
    <string name="sde_ct">Lie side</string>
    <string name="sde_save">Save</string>
    <string name="sde_reset">Reset</string>
    <string name="sde_zhinengdai">Belt</string>
    <string name="sde_dialog_fuwei_content">Please perform one-click reset first and then start learning your personality Settings</string>
    <string name="sde_dialog_btn_cancel">Cancel</string>
    <string name="sde_dialog_btn_yijianfuwei">A master reset</string>
    <string name="dangwei1">Level 1</string>
    <string name="dangwei2">Level 2</string>
    <string name="dangwei3">Level 3</string>
    <string name="dangwei4">Level 4</string>
    <string name="currently_network_not_connected">Currently connected to WI-FI</string>
    <string name="password">Password</string>
    <string name="password_hint">Please enter the WiFi password</string>
    <string name="remember_password">remember password</string>
    <string name="wifi_hint">This device only supports 2.4G Wi Fi connection</string>
    <string name="next_step">next step</string>
    <string name="configuring_step_hint">Configuring Wi Fi, please do not exit!</string>
    <string name="configuring_step_hint2">The whole process takes about 1 minute, please be patient and wait</string>
    <string name="wifi_configuration_failed">Wi Fi configuration failed</string>
    <string name="wifi_configuration_failed2">Please verify if your router name and password are correct and try again</string>
    <string name="retry">retry</string>
    <string name="wifi_success">Wi Fi configuration successful</string>
    <string name="device_networking_successful">Device networking successful</string>
    <string name="complete">complete</string>
</resources>