<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.sn.blackdianqi.view.ProlateItemView
            android:id="@+id/item_shujuluru"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="55dp"
            app:title="@string/ss_item_shujuluru" />

        <com.sn.blackdianqi.view.ProlateItemView
            android:id="@+id/item_jiaodutiaozheng"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="20dp"
            app:title="@string/ss_item_shuizitiaozheng" />

        <com.sn.blackdianqi.view.ProlateItemView
            android:id="@+id/item_shuimiandingshi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="20dp"
            app:desc="@string/ss_item_no_time"
            app:title="@string/ss_item_shuimiandingshi" />

        <com.sn.blackdianqi.view.ProlateItemView
            android:id="@+id/item_shuimianbaogao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="20dp"
            app:title="@string/ss_item_shuimianbaogao" />

        <com.sn.blackdianqi.view.ProlateSwitchView
            android:id="@+id/switch_shuimian"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="20dp"
            app:title="@string/ss_item_zhinengshuimian_close"
            />

        <com.sn.blackdianqi.view.ProlateSwitchView
            android:id="@+id/switch_yedeng"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="20dp"
            app:title="@string/ss_item_zhinengyedeng_close"
            />

    </LinearLayout>

</ScrollView>
