<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    android:orientation="vertical"
    tools:context=".activity.NetworkActivity">

    <com.sn.blackdianqi.view.TranslucentActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/llConnect1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/currently_network_not_connected"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_tuoyuan_normal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtWifiName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:paddingHorizontal="@dimen/dp_15"
                android:textColor="@color/white"
                android:textColorHint="@color/line_chart_text_color"
                android:textSize="@dimen/sp_12" />

            <ImageView
                android:id="@+id/ivSelectWifi"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:padding="@dimen/dp_10"
                android:src="@mipmap/ic_row" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_tuoyuan_normal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtWifiPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/dp_15"
                android:textColor="@color/white"
                android:textColorHint="@color/line_chart_text_color"
                android:textSize="@dimen/sp_12" />

            <ImageView
                android:id="@+id/ivEye"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:scaleType="center"
                android:src="@mipmap/icon_eye" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSelect"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:checked="true"
                android:src="@mipmap/ic_checkbox_selected_sq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/remember_password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/wifi_hint"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvNextStep"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/shape_btn_green"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llConnect2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/configuring_step_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/configuring_step_hint2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConnect3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:drawableLeft="@mipmap/icon_failed"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/wifi_configuration_failed"
            android:textColor="@color/FA3008"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/wifi_configuration_failed2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvRetry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/shape_btn_green"
            android:gravity="center"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/dialog_negetive"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConnect4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:drawableLeft="@mipmap/icon_success"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/wifi_success"
            android:textColor="@color/text_green"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/device_networking_successful"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvFinish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/shape_btn_green"
            android:gravity="center"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</LinearLayout>